Fix notification menu hidden by main-container

--- a/app/components/Notification/style.less
+++ b/app/components/Notification/style.less
@@ -1,5 +1,4 @@
 .notification-menu {
   right: 0px;
   margin-top: 12px;
-  z-index: 0 !important;
 }
